--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  width: 360px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+input {
+  width: 200px;
+  border: 1px solid #666;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+input:focus {
+  outline: none;
+}
+
+button {
+  border: none;
+  background-color: #666;
+  color: #fff;
+  border-radius: 5px;
+  padding: 5px;
+  margin-left: 5px;
+}
+
+button:hover {
+  background-color: #888;
+}
+
+span {
+  margin-left: 5px;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+form {
+  display: inline;
+  margin-left: 5px;
+}
+
+.mainForm {
+  margin-left: 0;
+}
